# color-picker

./: README.md  dev.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  ColorPicker.vue  Settings.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
